# Polix

./: .env.example  .gitignore  .uvrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  audit_agent.py  policy_agent.py  report_agent.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  agent.py  health.py  query.py
backend/app/core/: __init__.py  config.py  logger.py
backend/app/graph/: __init__.py  workflow_graph.py
backend/app/mcp/: __init__.py  mcp_loader.py
backend/app/mcp/tools/: __init__.py  file_tool.py  github_tool.py
backend/app/rag/: __init__.py  embeddings.py  loaders.py  retriever.py  splitters.py  vectorstore.py
backend/app/utils/: __init__.py  helpers.py
docs/: architecture.md  models.md  readme.md  uv-setup.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AgentTimeline.css  AgentTimeline.jsx  ChatWindow.css  ChatWindow.jsx  ComplianceScoreCard.css  ComplianceScoreCard.jsx  DocumentUploader.css  DocumentUploader.jsx  Sidebar.css  Sidebar.jsx
frontend/src/pages/: audit.css  audit.jsx  index.css  index.jsx  upload.css  upload.jsx
