[project]
name = "polix"
version = "1.0.0"
description = "Polix - Agentic AI Compliance Audit System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Polix Team"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langchain-openai==0.0.2",
    "langchain-core==0.1.10",
    "langgraph==0.0.20",
    "chromadb==0.4.18",
    "faiss-cpu==1.7.4",
    "pypdf==3.17.0",
    "python-dotenv==1.0.0",
    "openai==1.3.7",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

